# moveloader

./: .dockerignore  .gitignore  LICENSE.md  Makefile  README.md
.devcontainer/: Dockerfile  devcontainer.json
bootloader/: .gitignore  Cargo.toml  memory.x  rustfmt.toml
bootloader/src/: flash.rs  main.rs  metadata.rs  pages.rs  watchdog.rs
doc/: Hardware-Testing.md  Image-Build.md  User-Guide.md
image-builder/: .gitignore  Cargo.toml  README.md
image-builder/src/: byte_utils.rs  generate.rs  main.rs  read.rs  verification.rs  write.rs
image-builder/testdata/: main_flash.elf  main_ram.elf
interface/: Cargo.toml
interface/src/: crc.rs  lib.rs
scripts/: Dockerfile.bootloader  Dockerfile.imagebuilder  build_bootloader.sh  build_image.sh  env  setup_chip.sh  setup_containers.sh  test_hardware.sh
