[package]
authors = [
    "thomasw04 <35061939+thomasw04@users.noreply.github.com>",
    "xarantolus <xarantolus@protonmail.com>",
]
edition = "2018"
readme = "README.md"
name = "moveloader"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
cortex-m-semihosting = "0.5.0"
panic-halt = "0.2.0"
panic-semihosting = "0.6.0"
static_assertions = "1.1.0"
interface = { path = "../interface" }
stm32l4 = { version = "0.15.1", features = ["stm32l4r5", "rt"] }

# this lets you use `cargo fix`!
[[bin]]
name = "moveloader"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
lto = true        # better optimizations
opt-level = "z"
strip = true

[profile.dev]
codegen-units = 1 # better optimizations
debug = true
lto = true        # better optimizations
opt-level = "z"
