[package]
name = "image-builder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
interface ={ path = "../interface" }
clap = { version = "4.0", features = ["derive"] }
tempfile = "3.8.1"
regex = "1.10.2"
once_cell = "1.19.0"
